# rust

./: .gitignore
command_line_arguments/: Cargo.toml  README.md
command_line_arguments/src/: cli.yml  main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-rocket/: Cargo.toml  README.md
hello-rocket/src/: main.rs  models.rs  routes.rs
hello_world/: Cargo.toml  README.md
http_server/: Cargo.toml  README.md
http_server/src/: main.rs
http_server/www/: index.html
http_server/www/error/: 404.html
rust_rocket_mongo_starter/: Cargo.toml  README.md  Rocket.toml
rust_rocket_mongo_starter/src/: main.rs
rust_rocket_mongo_starter/src/lib/: mongo.rs
rust_rocket_mongo_starter/src/models/: mod.rs  status.rs  users.rs
rust_rocket_mongo_starter/src/routes/: debug.rs  errors.rs  index.rs  mod.rs  users.rs
rust_rocket_starter/: Cargo.toml  README.md
rust_rocket_starter/src/: main.rs
rust_rocket_starter/src/models/: status.rs
rust_rocket_starter/src/routes/: debug.rs  errors.rs  index.rs  mod.rs
tcp_server/: Cargo.toml  README.md
tcp_server/src/: main.rs
