[package]
name = "rust_rocket_mongo_starter"
version = "0.1.0"
authors = ["gv"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
rocket_codegen = "0.4.1"
#rocket_contrib = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.6"
bson = "0.13"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "mongodb_pool"]
